<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_dark"
    android:backgroundTint="@color/grey_dark"
    app:cardCornerRadius="18dp"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_baseline_star_border_24">

        </ImageView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/itemImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="12dp"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:id="@+id/categoryC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/this_is_the_list_title"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center">

            </TextView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/printed_circuit_board"
            android:layout_marginTop="15dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium">

        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/price"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/rating"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv">

            <TextView
                android:id="@+id/priceToPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_2_3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="296dp">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/learnMore"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/learn_more"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="296dp">

            </TextView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/add_to_your_favourite"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toEndOf="@+id/learnMore"
            app:layout_constraintTop_toBottomOf="@+id/nameTv">

        </TextView>


        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_star_border_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.628"
            app:layout_constraintStart_toEndOf="@+id/learnMore"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.304">

        </ImageView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>